src/main/java/com/example/projectboard/support/error/ErrorCode.java
package com.example.projectboard.support.error;

public enum ErrorCode {
    E500,
    E400
}
